--- a/index.html
+++ b/index.html
@@ -31,25 +31,12 @@
     <div class="summary">
       Summary
       <div class="reaction">
-        <span>
-          Reaction
-          80/100
-        </span>
-      
-        <span>
-          Memory
-          92 / 100
-        </span>
-        
-        <span>
-          Verbal
-          61 / 100
-        </span>
-
-        <span>
-          Visual
-          72 / 100
-        </span>
+        <ul>
+          <li class="reaction-red">Reaction 80/100</li>
+          <li class="memory-yellow">Memory 92/100</li>
+          <li class="verbal-green">Verbal 61/100</li>
+          <li class="visual-blue">Visual 72/100</li>
+        </ul>
       </div>
 
       <button>
