--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <div class="main-section">
     <div class="result-main">
       <div class="result">
-        <caption>Your Result</caption>
+        <h1 class="title">Your Result</h1>
         <div class="score">
           76
           of 100
         </div>
         <div class="feedback">
-          Great
+          <h3>Great</h3>
           <div class="feedback-description">
             You scored higher than 65% of the people who have taken these tests.
           </div>
-        </div>
+        </di>
       </div>
     </div>
     
     <div class="summary">
-      Summary
+      <h2 class="title">Summary</h2>
       <div class="reaction">
         <ul>
           <li class="reaction-red">Reaction 80/100</li>
@@ -42,7 +42,6 @@
       <button>
         Continue
       </button>
-    </div>
     </div>
   </div>
   <!-- <div class="attribution">
