--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
+
+
   <div class="main-section">
+    
     <div class="result-main">
       <div class="result">
         <h1 class="title">Your Result</h1>
         <div class="score">
-          76
-          of 100
+          <span>76 of 100</span>
         </div>
         <div class="feedback">
           <h3>Great</h3>
           <div class="feedback-description">
-            You scored higher than 65% of the people who have taken these tests.
+            <p>You scored higher than 65% of the people who have taken these test</p>
           </div>
-        </di>
+        </div>
       </div>
     </div>
-    
+
     <div class="summary">
       <h2 class="title">Summary</h2>
       <div class="reaction">
@@ -37,16 +39,10 @@
           <li class="verbal-green">Verbal 61/100</li>
           <li class="visual-blue">Visual 72/100</li>
         </ul>
-      </div>
-
-      <button>
-        Continue
-      </button>
+      </div> 
+      <button>Continue</button>
     </div>
+
   </div>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
