Added border radius and gap

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 
   <div class="main-section">
-    
+
     <div class="result-main">
       <div class="result">
-        <h1 class="title">Your Result</h1>
-        <div class="score">
+        <h1 class="title text-color">Your Result</h1>
+        <div class="score text-color">
           <span>76 of 100</span>
         </div>
-        <div class="feedback">
+        <div class="feedback text-color">
           <h3>Great</h3>
           <div class="feedback-description">
             <p>You scored higher than 65% of the people who have taken these test</p>
