--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h2 class="title">Summary</h2>
       <div class="reaction">
         <ul>
-          <li class="reaction-red">Reaction 80/100</li>
-          <li class="memory-yellow">Memory 92/100</li>
-          <li class="verbal-green">Verbal 61/100</li>
-          <li class="visual-blue">Visual 72/100</li>
+          <li class="reaction-red"> <img src="/assets/images/icon-reaction.svg" alt="Reaction Icon"> Reaction 80/100</li>
+          <li class="memory-yellow"> <img src="/assets/images/icon-memory.svg" alt="Memory"> Memory 92/100</li>
+          <li class="verbal-green"> <img src="assets/images/icon-verbal.svg" alt="Verbal"> Verbal 61/100</li>
+          <li class="visual-blue"> <img src="/assets/images/icon-visual.svg" alt="Visual">  Visual 72/100</li>
         </ul>
       </div> 
       <button>Continue</button>
