--- a/index.html
+++ b/index.html
@@ -18,75 +18,83 @@
       <div class="wrapper">
         <div class="result-main">
           <div class="result">
-            <h1 class="result-section-color fw-700 text-align">Your Result</h1>
+            <h1 class="result-section-color fs-4 fw-700 text-center">Your Result</h1>
             <div class="score-wrapper">
               <div class="score text-color">
-                <span class="result-score fw-800">76 </span>
+                <span class="result-score fs-1 fw-800">76 </span>
                 <span class="result-outof result-section-color">of 100</span>
               </div>
             </div>
             <div class="feedback text-color">
-              <h3>Great</h3>
+              <h3 class="text-center fs-3 fw-500">Great</h3>
               <div class="feedback-description">
-                <p class="result-section-color">You scored higher than 65% of the people who have taken these test</p>
+                <p class="result-section-color font-size text-center text-justify">You scored higher than 65% of the people who have taken these test</p>
               </div>
             </div>
           </div>
         </div>
     
         <div class="summary">
-          <h2 class="summary-title">Summary</h2>
+          <h2 class="summary-title fw-700">Summary</h2>
           <div class="feeds">
             <ul>
               <li class="reaction-red">
                 <div class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path stroke="#F55" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M10.833 8.333V2.5l-6.666 9.167h5V17.5l6.666-9.167h-5Z"/>
                   </svg> 
-                  Reaction  
+                  <span class="fw-700">Reaction</span>
                 </div>
                 <div class="summary-score">
-                  <span class="numerator">80</span> 
-                  <span class="denominator">/100</span>
+                  <span class="numerator fw-700">80</span> 
+                  <span class="denominator fw-700">/100</span>
                 </div>
               </li>
     
               <li class="memory-yellow">
                 <div class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path stroke="#FFB21E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M5.833 11.667a2.5 2.5 0 1 0 .834 4.858"/><path stroke="#FFB21E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M3.553 13.004a3.333 3.333 0 0 1-.728-5.53m.025-.067a2.083 2.083 0 0 1 2.983-2.824m.199.054A2.083 2.083 0 1 1 10 3.75v12.917a1.667 1.667 0 0 1-3.333 0M10 5.833a2.5 2.5 0 0 0 2.5 2.5m1.667 3.334a2.5 2.5 0 1 1-.834 4.858"/><path stroke="#FFB21E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M16.447 13.004a3.334 3.334 0 0 0 .728-5.53m-.025-.067a2.083 2.083 0 0 0-2.983-2.824M10 3.75a2.085 2.085 0 0 1 2.538-2.033 2.084 2.084 0 0 1 1.43 2.92m-.635 12.03a1.667 1.667 0 0 1-3.333 0"/></svg>
-                  Memory  
+                  <span class="fw-700">Memory</span>  
                 </div>
                 <div class="summary-score">
-                  <span class="numerator">92</span> 
-                  <span class="denominator">/100</span>
+                  <span class="numerator fw-700">92</span> 
+                  <span class="denominator fw-700">/100</span>
                 </div>
               </li>
               <li class="verbal-green">
                 <div class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path stroke="#00BB8F" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M7.5 10h5M10 18.333A8.333 8.333 0 1 0 1.667 10c0 1.518.406 2.942 1.115 4.167l-.699 3.75 3.75-.699A8.295 8.295 0 0 0 10 18.333Z"/></svg>
-                  Verbal  
+                  <span class="fw-700">Verbal</span>  
                 </div>
                 <div class="summary-score">
-                  <span class="numerator">61</span> 
-                  <span class="denominator">/100</span>
+                  <span class="numerator fw-700">61</span> 
+                  <span class="denominator fw-700">/100</span>
                 </div>
               </li>
               <li class="visual-blue">
                 <div class="icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path stroke="#1125D6" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M10 11.667a1.667 1.667 0 1 0 0-3.334 1.667 1.667 0 0 0 0 3.334Z"/><path stroke="#1125D6" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"/></svg>
-                  Visual  
+                  <span class="fw-700">Visual</span>  
                 </div>
                 <div class="summary-score">
-                  <span class="numerator">72</span> 
-                  <span class="denominator">/100</span>
+                  <span class="numerator fw-700">72</span> 
+                  <span class="denominator fw-700">/100</span>
                 </div>
               </li>
             </ul>
-            <button>Continue</button>
+            <button class="btn font-size">Continue</button>
           </div> 
         </div>
       </div>
     </div>
 
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/Prabhatgrg" target="_blank">Prabhat Gurung</a>.
+      </div>
+    </footer>
+
   </div>
+
 </body>
 </html>
